# pui-connection

./: .dockerignore  .env.example  .env.local.example  .env.local.mock.example  .env.production.example  .env.sandbox.example  AGENTS.md  Dockerfile  README.md  TASKS.md  docker-compose.yml  pyproject.toml
deploy/nginx/: sandbox.conf
docs/: README.md
docs/pui/: 00-resumen-ejecutivo.md  01-requisitos-obligatorios.md  02-flujo-oficial.md  03-mvp-alcance.md  04-mapeo-core-php.md  05-arquitectura.md  06-modelo-datos.md  07-endpoints.md  08-casos-borde-y-riesgos.md  09-checklist-sandbox-seguridad.md  10-despliegue-ambientes.md  11-playbook-sandbox.md  12-prueba-webhook.md  13-requerimientos-empresa-para-sandbox.md  14-pui-mock-local.md  15-estado-actual-y-pendientes.md
scripts/: local_e2e_with_mock_pui.sh  sandbox_smoke_test.sh
scripts/payloads/: activar_reporte.json  activar_reporte_prueba.json
src/pui_adapter_service/: __init__.py  config.py  errors.py  main.py  middleware.py  mock_pui.py  scheduler.py  security.py
src/pui_adapter_service/api/: routes.py  schemas.py
src/pui_adapter_service/db/: models.py  session.py
src/pui_adapter_service/fixtures/: core_simulation.json
src/pui_adapter_service/services/: core_adapter.py  phases.py  pui_client.py  reports.py
tests/: conftest.py  test_api.py  test_config.py  test_mock_pui.py  test_security.py
